--- a/incoming_impactors_mars_binder.ipynb
+++ b/incoming_impactors_mars_binder.ipynb
@@ -425,7 +425,7 @@
     "    D_lo = out[2]**(b - 0.01) * (a - 3.5e-3) \n",
     "    impact_diam = out[1] *2\n",
     "\n",
-    "    print(f\"entry velocity={v0/1000.:.2f} km/s\\nentry diametre={diametre:.2f} m\\nentry mass={m0:.2f}\\nentry energy={0.5 * m0 * v0**2:.2e}\\nimpact velocity={out[0]/1000.:.2f} km/s\\nfinal mass={out[8]:.2f} kg\\nfinal diametre={impact_diam:.2f} m\\nfinal energy={out[2] / KT_TNT_EQUIV:.2e} ktTNT,\\nfinal flight angle={out[3]:.2f} degrees,\\nbreakup altitude={out[4]:.2f} m\\n\\nNominal crater diameter={D_nom:.2f} m\\nUpper crater diameter={D_hi:.2f}\\nLower crater diameter={D_lo:.2f} m\")\n",
+    "    print(f\"entry velocity={v0/1000.:.2f} km/s\\nentry diametre={diametre:.2f} m\\nentry mass={m0:.2f}\\nentry energy={0.5 * m0 * v0**2:.2e} J\\nimpact velocity={out[0]/1000.:.2f} km/s\\nfinal mass={out[8]:.2f} kg\\nfinal diametre={impact_diam:.2f} m\\nfinal energy={out[2]:.2e} J,\\nfinal flight angle={out[3]:.2f} degrees,\\nbreakup altitude={out[4]:.2f} m\\n\\nNominal crater diameter={D_nom:.2f} m\\nUpper crater diameter={D_hi:.2f}\\nLower crater diameter={D_lo:.2f} m\")\n",
     "        \n",
     "    ## use drag only, no ablation:\n",
     "#     out = drag_fun(v0, slope, r, density, strength)\n",
